--- a/TaskCalculator/Views/Home/Contact.cshtml
+++ b/TaskCalculator/Views/Home/Contact.cshtml
@@ -6,7 +6,7 @@
 <h4>Aleksandra Kroczak</h4>
 
 <address>   
-    tu będzie link do repo<br />
+    <a href="https://github.com/kroczak/NumericSequenceCalculator/tree/master/TestTaskCalculator">GitHub Project</a><br />
     <strong>Phone:</strong> +48 880 304 861 <br />
     <strong>Mail:</strong>   <a href="mailto:aleksandra.kroczak@gmail.com">aleksandra.kroczak@gmail.com</a><br />
 </address>
