added sequences and tests

--- a/TaskCalculator/Views/Home/Index.cshtml
+++ b/TaskCalculator/Views/Home/Index.cshtml
@@ -20,22 +20,22 @@
 <form action="/Home/Calculate">
     <h2>Enter number: <input type="number" name="sequenceNumber" /> </h2>
     <h2>Chose sequence to display: </h2>
-        <p><input type="radio" value="" name="sequenceChoice"/> All numbers up to and including the number entered</p>
-        <p><input type="radio" value="" name="sequenceChoice"/> All odd numbers up to and including the number entered</p>
-        <p><input type="radio" value="" name="sequenceChoice"/> All even numbers up to and including the number entered</p>
+        <p><input type="radio" value="default" name="sequenceChoice"/> All numbers up to and including the number entered</p>
+        <p><input type="radio" value="odd" name="sequenceChoice"/> All odd numbers up to and including the number entered</p>
+        <p><input type="radio" value="even" name="sequenceChoice"/> All even numbers up to and including the number entered</p>
         <p>
-            <input type="radio" value="" name="sequenceChoice"/> All numbers up to and including the number entered, except
+            <input type="radio" value="c" name="sequenceChoice"/> All numbers up to and including the number entered, except
             when, a number is a multiple of 3 output C
         </p>
         <p>
-            <input type="radio" value="" name="sequenceChoice"/>All numbers up to and including the number entered, except
+            <input type="radio" value="e" name="sequenceChoice"/>All numbers up to and including the number entered, except
             when, a number is a multiple of 5 output E"
         </p>
         <p>
-            <input type="radio" value="" name="sequenceChoice"/> All numbers up to and including the number entered, except
+            <input type="radio" value="z" name="sequenceChoice"/> All numbers up to and including the number entered, except
             when, a number is a multiple of both 3 and 5 output Z
         </p>
-        <p><input type="radio" value="" name="sequenceChoice"/> All fibonacci number up to and including the number entered</p>
+        <p><input type="radio" value="fibonacci" name="sequenceChoice"/> All fibonacci number up to and including the number entered</p>
 
         <input type="submit" class="btn btn-primary btn-lg" value="Calculate sequence" />
 </form>
