--- a/TaskCalculator/Views/Home/Instruction.cshtml
+++ b/TaskCalculator/Views/Home/Instruction.cshtml
@@ -14,9 +14,9 @@ Available options to dispaly are:
     <li>
         All numbers up to and including the number entered, except some conditions
         <ul>
-            <li>display C if a number is a multiple by 3</li>
-            <li>display E if a number is a multiple by 5</li>
-            <li>display Z number is a multiple by both 3 and 5</li>
+            <li>display C if a number is a multiple of 3</li>
+            <li>display E if a number is a multiple of 5</li>
+            <li>display Z number is a multiple of both 3 and 5</li>
         </ul>
     </li>
     <li>All fibonacci number up to and including the number entered</li>
